--- a/backstage-infra/backstage/packages/app/package.json
+++ b/backstage-infra/backstage/packages/app/package.json
@@ -44,7 +44,7 @@
     "@backstage/plugin-techdocs-react": "^1.1.9",
     "@backstage/plugin-user-settings": "^0.7.6",
     "@backstage/theme": "^0.4.1",
-    "@ediri/plugin-pulumi": "^0.1.3",
+    "@pulumi/backstage-plugin-pulumi": "^0.1.0",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
     "@weaveworksoss/backstage-plugin-flux": "^0.8.1",
