--- a/backstage-infra/backstage/app-config.yaml
+++ b/backstage-infra/backstage/app-config.yaml
@@ -1,9 +1,9 @@
 app:
-  title: Fluxumi Backstage App
+  title: Zephyr Archaeotech Emporium Backstage App
   baseUrl: http://localhost:3000
 
 organization:
-  name: Fluxumi
+  name: Zephyr Archaeotech Emporium
 
 backend:
   # Used for enabling authentication, secret is shared by all backend plugins
@@ -77,7 +77,7 @@ catalog:
     - allow: [Domain, Systems, Group, Component, System, API, Resource, Location]
   locations:
     - type: url
-      target: https://github.com/my-backstage-demo/backstage-pulumi-flux-workshop/blob/main/scaffolder-templates/template.yaml
+      target: https://github.com/my-backstage-demo/backstage-pulumi-templates/blob/main/scaffolder-templates/templates.yaml
       rules:
       - allow: [Template]
     # Local example data, file locations are relative to the backend process, typically `packages/backend`
