--- a/backstage-infra/backstage/package.json
+++ b/backstage-infra/backstage/package.json
@@ -17,6 +17,7 @@
     "clean": "backstage-cli repo clean",
     "test": "backstage-cli repo test",
     "test:all": "backstage-cli repo test --coverage",
+    "fix": "backstage-cli repo fix",
     "lint": "backstage-cli repo lint --since origin/master",
     "lint:all": "backstage-cli repo lint",
     "prettier:check": "prettier --check .",
@@ -29,13 +30,13 @@
     ]
   },
   "devDependencies": {
-    "@backstage/cli": "^0.22.10",
+    "@backstage/cli": "^0.22.13",
     "@spotify/prettier-config": "^12.0.0",
     "concurrently": "^8.0.0",
     "lerna": "^4.0.0",
     "node-gyp": "^9.0.0",
     "prettier": "^2.3.2",
-    "typescript": "~5.0.0"
+    "typescript": "~5.2.0"
   },
   "resolutions": {
     "@types/react": "^17",
