--- a/backstage-infra/backstage/packages/backend/Dockerfile
+++ b/backstage-infra/backstage/packages/backend/Dockerfile
@@ -9,13 +9,7 @@
 #
 # Once the commands have been run, you can build the image using `yarn build-image`
 
-FROM --platform=linux/amd64 node:18-bookworm-slim
-
-RUN <<EOF
-## Install pulumi and set to PATH
-curl -fsSL https://get.pulumi.com | sh
-PATH="/root/.pulumi/bin:${PATH}"
-EOF
+FROM --platform=linux/amd64 pulumi/pulumi:3.89.0
 
 # Install isolate-vm dependencies, these are needed by the @backstage/plugin-scaffolder-backend.
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
@@ -31,7 +25,7 @@ RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     apt-get install -y --no-install-recommends libsqlite3-dev
 
 # From here on we use the least-privileged `node` user to run the backend.
-USER node
+#USER node
 
 # This should create the app dir as `node`.
 # If it is instead created as `root` then the `tar` command below will fail: `can't create directory 'packages/': Permission denied`.
@@ -55,4 +49,4 @@ RUN --mount=type=cache,target=/home/node/.cache/yarn,sharing=locked,uid=1000,gid
 COPY --chown=node:node packages/backend/dist/bundle.tar.gz app-config*.yaml ./
 RUN tar xzf bundle.tar.gz && rm bundle.tar.gz
 
-CMD ["node", "packages/backend", "--config", "app-config.yaml", "--config", "app-config.production.yaml"]
+ENTRYPOINT ["node", "packages/backend", "--config", "app-config.yaml", "--config", "app-config.production.yaml"]
