feat: update libraries

--- a/backstage-infra/backstage/app-config.yaml
+++ b/backstage-infra/backstage/app-config.yaml
@@ -6,6 +6,9 @@ organization:
   name: Zephyr Archaeotech Emporium
 
 backend:
+  reading:
+    allow:
+    - host: '*.swagger.io'
   # Used for enabling authentication, secret is shared by all backend plugins
   # See https://backstage.io/docs/auth/service-to-service-auth for
   # information on the format
@@ -77,7 +80,7 @@ catalog:
     - allow: [Domain, Systems, Group, Component, System, API, Resource, Location]
   locations:
     - type: url
-      target: https://github.com/my-backstage-demo/backstage-pulumi-templates/blobbackstage-azure-infrastructure/main/scaffolder-templates/templates.yaml
+      target: https://github.com/my-backstage-demo/backstage-pulumi-templates/blob/main/scaffolder-templates/templates.yaml
       rules:
       - allow: [Template]
     # Local example data, file locations are relative to the backend process, typically `packages/backend`
